Fixed bug missing href in index linking to myself.html
There is a bug where there is no anchor tag linking to myself.html. This was fixed by adding
the anchor tag in index.html and href to myself.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <a href="https://www.theodinproject.com">Click me!</a>
 
     <a href="./pages/about.html">About Us</a>
+
+    <a href="./pages/myself.html">Learn More about me!</a>
 </body>
 </html>
