Added comments and modified text
Added comments and changed the Homepage text.
Functionality is the same. Only the text
are changed.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Comments for commiting -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <title>Odin Links and Images</title>
 </head>
 <body>
-    <h1>Homepage</h1>
+    <h1>Homepage of the Greats</h1>
 
     <img src="./images/dog.jpg" alt="image of a dog" height="310" width="310">
 
@@ -16,4 +17,5 @@
 
     <a href="./pages/myself.html">Learn More about me!</a>
 </body>
+
 </html>
